Bug FIx: wrap text with ```...``` when overflow

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-#bg-container {
+.bg-container {
     background-image: url('../public/extra_clean_paper.png');
     background-repeat: repeat;
 }
